resources/css/base.css
/* ... */
/* open state of first descendant link within a top level 
   navigation item */
.nav-item > a.open {
    border-bottom: none;
    z-index: 1;
}

/* sub-navigation panel */
.sub-nav {
    background-color: #153B50;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
    position: absolute;
    display: none;
    top: 28px;
    padding: 0.5em 0 0;
}

/* sub-navigation panel open state */
.sub-nav.open {
    display: block;
}

/* list of items within sub-navigation panel */
.sub-nav ul {
    display: inline-block;
    vertical-align: top;
    padding: 0;
}

.primary-nav .sub-nav ul li a {
    display: block;
    font-family: 'ProximaNovaRegular';
    font-size: 14px;
    padding: 3px 20px;
}

.primary-nav .sub-nav ul li a:focus, .primary-nav .sub-nav ul li a:hover {
    background: #fff;
    color: #153B50;
}

/* list item within sub-navigation panel */
.sub-nav li {
    display: block;
    margin: 0;
    padding: 0;
}

.mobile-nav ul {
    margin-bottom: 10px;
    padding-left: 0;
}

.mobile-nav li {
    color: #fff;
    font-family: 'ProximaNovaSemibold';
    font-size: 110%;
    list-style: none;
    margin-bottom: 0;
}

.mobile-nav li a {
    font-family: 'ProximaNovaLight';
    font-size: 14px;
    font-size: 1.4rem;
    letter-spacing: 0.06em;
}

.mobile-nav {
    background: #3b3b3b;
    background: -o-linear-gradient(top, #3e3e3e, #383838);
    background: -ms-linear-gradient(top, #3e3e3e, #383838);
    background: -moz-linear-gradient(top, #3e3e3e, #383838);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #3e3e3e), color-stop(1, #383838));
    background: -webkit-linear-gradient(#3e3e3e, #383838);
    background: linear-gradient(top, #3e3e3e, #383838);
    text-indent: 0;
}

.mobile-nav a {
    background: #3b3b3b;
    background: -o-linear-gradient(top, #3e3e3e, #383838);
    background: -ms-linear-gradient(top, #3e3e3e, #383838);
    background: -moz-linear-gradient(top, #3e3e3e, #383838);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #3e3e3e), color-stop(1, #383838));
    background: -webkit-linear-gradient(#3e3e3e, #383838);
    background: linear-gradient(top, #3e3e3e, #383838);
    font-family: 'ProximaNovaSemibold';
    display: block;
    padding: 0.5em 10%;
    border-top: 1px solid #484848;
    border-bottom: 1px solid #2e2e2e;
    text-decoration: none;
    text-shadow: 0 -1px 2px #222;
    color: #f7f7f7;
    position: relative;
}

.mobile-nav li a:hover, .mobile-nav li a:focus {
    background: #404040;
    background: -o-linear-gradient(top, #484848, #383838);
    background: -ms-linear-gradient(top, #484848, #383838);
    background: -moz-linear-gradient(top, #484848, #383838);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #484848), color-stop(1, #383838));
    background: -webkit-linear-gradient(#484848, #383838);
    background: linear-gradient(top, #484848, #383838);
    color: #fdaf17;
}

.mobile-nav li a:hover:before, .mobile-nav li a:focus:before, .mobile-nav li a.current:before {
    content: "\f105";
    font-family: 'FontAwesome';
    height: 5px;
    width: 5px;
    position: absolute;
    left: 10px;
    top: 22%;
}

.mobile-nav li a.current {
    color: #fdaf17;
}

/*---CAROUSEL---*/
.carousel-caption {
    background: #153B50;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;
    padding-left: 55px;
    padding-right: 55px;
}

.carousel-control.left, .carousel-control.right {
    opacity: .8;
}

.carousel-control:focus, .carousel-control:hover {
    color: #FDAF17;
}

.carousel-control:focus span {
    outline: 2px solid #487896;
}

.carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right {
    background-color: black;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    border-radius: 100px;
    height: auto;
    padding: 8px;
    width: auto;
}

.carousel-control:hover .glyphicon-chevron-left, .carousel-control:hover .glyphicon-chevron-right, .carousel-control:focus .glyphicon-chevron-left, .carousel-control:focus .glyphicon-chevron-right {
    border: 1px solid black;
    padding: 7px;
}

.carousel-control {
    z-index: 1;
}

.carousel-inner > .item {
    min-height: 260px;
}

.carousel-inner > .item h1 {
    font-size: inherit;
    padding: inherit;
}

.carousel-inner > .item > img {
    display: none;
}

.carousel-indicators {
    bottom: 0;
    margin-bottom: 0;
}

.carousel-indicators .active {
    margin: 1px;
}

/*---SIDEBAR---*/

/*---HOMEPAGE---*/
.carousel-indicators li, .carousel-indicators .active {
    height: 15px;
    width: 15px;
}

.carouselButtons {
    background-color: rgba(0, 0, 0, 0.77);
    display: none;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 2;
}

.carouselButtons .btn-link {
    color: #fff;
}

.carouselButtons .btn-link:focus, .carouselButtons .btn-link:hover {
    color: #FDAF17;
}

.subcategory-section h2 {
    margin-top: 50px;
}

.subcategories .thumb {
    border: none;
    display: table;
    margin-bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    padding: 0px;
    position: relative;
}

.subcategories .cap {
    position: absolute;
    bottom: 0;
    background: rgba(0, 0, 0, 0.8);
    display: table-cell;
    left: 0;
    padding: 0;
    text-transform: uppercase;
    width: 100%;
}

.subcategories .cap > h3 {
    min-height: 70px;
    position: relative;
    margin-top: 0;
    margin-bottom: 0;
}

.subcategories .cap a {
    color: rgb(255, 255, 255);
    display: block;
    font-size: 19px;
    text-transform: uppercase;
    letter-spacing: 0.07em;
    padding-bottom: 23px;
    padding-top: 27px;
    transition: background-color 0.3s ease;
}

.subcategories .cap a:hover {
    background: #000;
}

.subcategories .cap h3.multi-line a {
    margin-top: 0;
    margin-bottom: 0;
    padding-bottom: 13px;
    padding-top: 17px;
}
/* ... */

